--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Photography Portfolio</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="container nav_container">
+            <a href="index.html"><img src="/assets/logo.png" alt="nav logo"></a>
+            <ul class="nav_links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#exhibitions">Exhibitions</a></li>
+            </ul>
+            <ul class="nav_socials">
+                <li><a href="https://instagram.com/" target="_blank"><i class="uil uil-instagram-alt"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="uil uil-twitter"></i></a></li>
+                <li><a href="https://youtube.com/" target="_blank"><i class="uil uil-youtube"></i></a></li>
+            </ul>
+            <button class="nav_toggle_btn" id="nav_toggle_open"><i class="uil uil-bars"></i></button>
+            <button class="nav_toggle_btn" id="nav_toggle_close"><i class="uil uil-multiply"></i></button>
+        </div>
+    </nav>
 </body>
 </html>
