--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="container nav_container">
-            <a href="index.html"><img src="/assets/logo.png" alt="nav logo"></a>
+            <a href="index.html" class="nav_logo"><img src="/assets/logo.png" alt="nav logo"></a>
             <ul class="nav_links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -22,9 +22,10 @@
                 <li><a href="https://twitter.com/" target="_blank"><i class="uil uil-twitter"></i></a></li>
                 <li><a href="https://youtube.com/" target="_blank"><i class="uil uil-youtube"></i></a></li>
             </ul>
-            <button class="nav_toggle_btn" id="nav_toggle_open"><i class="uil uil-bars"></i></button>
-            <button class="nav_toggle_btn" id="nav_toggle_close"><i class="uil uil-multiply"></i></button>
+            <button class="nav_toggle-btn" id="nav_toggle_open"><i class="uil uil-bars"></i></button>
+            <button class="nav_toggle-btn" id="nav_toggle_close"><i class="uil uil-multiply"></i></button>
         </div>
     </nav>
+    <script src="/app.js"></script>
 </body>
 </html>
