--- a/index.html
+++ b/index.html
@@ -26,6 +26,30 @@
             <button class="nav_toggle-btn" id="nav_toggle_close"><i class="uil uil-multiply"></i></button>
         </div>
     </nav>
+
+    <header>
+        <div class="container header_container">
+            <div class="left">
+                <div class="header_image-bg"></div>
+                <div class="header_image-lg">
+                    <img src="/assets/header.jpg" alt="header image">
+                </div>
+                <div class="header_image-sm">
+                    <img src="/assets/header.jpg" alt="header image">
+                </div>
+            </div>
+            <div class="right">
+                <div class="header_head">
+                    <div class="empty header_empty"></div>
+                    <a class="header_tag">#Best Travel Photgrapher 2023</a>
+                </div>
+                <h1>See the beauty of the world through my lense</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quidem asperiores atque autem voluptatum in veniam maiores iste nesciunt! Odio debitis vero sint aliquid at sunt voluptatum cum fugiat eaque.</p>
+                <a href="mailto:support@frankdev.com" class="header_btn-md">Let's Talk</a>
+            </div>
+        </div>
+    </header>
+
     <script src="/app.js"></script>
 </body>
 </html>
