--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <header>
         <div class="container header_container">
-            <div class="left">
+            <div class="header_left">
                 <div class="header_image-bg"></div>
                 <div class="header_image-lg">
                     <img src="/assets/header.jpg" alt="header image">
@@ -38,13 +38,13 @@
                     <img src="/assets/header.jpg" alt="header image">
                 </div>
             </div>
-            <div class="right">
+            <div class="header_right">
                 <div class="header_head">
                     <div class="empty header_empty"></div>
                     <a class="header_tag">#Best Travel Photgrapher 2023</a>
                 </div>
                 <h1>See the beauty of the world through my lense</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quidem asperiores atque autem voluptatum in veniam maiores iste nesciunt! Odio debitis vero sint aliquid at sunt voluptatum cum fugiat eaque.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quidem asperiores vero sint aliquid at sunt voluptatum cum fugiat eaque.</p>
                 <a href="mailto:support@frankdev.com" class="header_btn-md">Let's Talk</a>
             </div>
         </div>
@@ -55,7 +55,7 @@
 
 
 
-    
+
     <br>
     <br>
     <br>
