--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
         </div>
     </header>
 
+    <div class="header_frames">
+        <div class="header_frame">
+            <img src="/assets/frame1.jpg" alt="header frame one">
+        </div>
+        <div class="header_frame">
+            <img src="/assets/frame2.jpg" alt="header frame two">
+        </div>
+    </div>
+    <a href="mailto:support@frankdev.com" class="contact_btn header_btn">
+        <i class="uil uil-arrow-up-right"></i>
+        <p>CONTACT - SEND ME AN EMAIL</p>
+    </a>
+
 
 
 
