--- a/index.html
+++ b/index.html
@@ -63,7 +63,34 @@
         <p>CONTACT - SEND ME AN EMAIL</p>
     </a>
 
+<section id="about">
+    <div class="container about_container">
+        <h2 class="about_title">About<br>Fank Dev</h2>
+        <a href="mailto:support@frankdev.com" class="contact_btn header_btn">
+            <i class="uil uil-arrow-up-right"></i>
+            <p>CONTACT - SEND ME AN EMAIL</p>
+        </a>
+        <div class="about_left">
+            <div class="about_image">
+                <div class="about_image-bg"></div>
+                <div class="about_image-lg">
+                    <img src="/assets/about.jpg" alt="about frank dev">
+                </div>
+                <div class="about_image-sm">
+                    <img src="/assets/about.jpg" alt="about frank dev">
+                </div>
+            </div>
+        </div>
+        <div class="about_right">
+            <div class="empty about_empty"></div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque at voluptas esse ipsa delectus velit et laborum voluptatem nisi rerum!</p>
 
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo deserunt tempore asperiores corporis amet, voluptatibus soluta voluptas culpa modi molestias. Odio incidunt tenetur doloribus reiciendis?</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas molestias dolores suscipit perferendis magnam iste molestiae velit harum at sapiente.</p>
+        </div>
+    </div>
+</section>
 
 
 
