--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <section id="about">
     <div class="container about_container">
         <h2 class="about_title">About<br>Fank Dev</h2>
-        <a href="mailto:support@frankdev.com" class="contact_btn header_btn">
+        <a href="mailto:support@frankdev.com" class="contact_btn about_btn">
             <i class="uil uil-arrow-up-right"></i>
             <p>CONTACT - SEND ME AN EMAIL</p>
         </a>
@@ -87,7 +87,7 @@
 
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo deserunt tempore asperiores corporis amet, voluptatibus soluta voluptas culpa modi molestias. Odio incidunt tenetur doloribus reiciendis?</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas molestias dolores suscipit perferendis magnam iste molestiae velit harum at sapiente.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas molestias dolores suscipit perferendis magnam iste .</p>
         </div>
     </div>
 </section>
