--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Responsive Photography Portfolio</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 <body>
     <nav>
@@ -92,6 +93,51 @@
     </div>
 </section>
 
+<section id="gallery">
+    <div class="container gallery_container swiper mySwiper">
+        <div class="gallery_head">
+            <h2 class="gallery_title">My Gallery</h2>
+            <div class="empty gallery_empty"></div>
+        </div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo praesentium molestiae officiis a distinctio quos tempora delectus libero! Eum similique, cumque beatae ullam praesentium quas eaque numquam tempore architecto perspiciatis.</p>
+        <div class="swiper-wrapper">
+            <article class="swiper-slide">
+                <img src="/assets/gallery1.jpg" alt="">
+            </article>
+            <article class="swiper-slide">
+                <img src="/assets/gallery2.jpg" alt="">
+            </article>
+            <article class="swiper-slide">
+                <img src="/assets/gallery3.jpg" alt="">
+            </article>
+            <article class="swiper-slide">
+                <img src="/assets/gallery4.jpg" alt="">
+            </article>
+            <article class="swiper-slide">
+                <img src="/assets/gallery5.jpg" alt="">
+            </article>
+            <article class="swiper-slide">
+                <img src="/assets/gallery6.jpg" alt="">
+            </article>
+            <article class="swiper-slide">
+                <img src="/assets/gallery7.jpg" alt="">
+            </article>
+            <article class="swiper-slide">
+                <img src="/assets/gallery8.jpg" alt="">
+            </article>
+            <article class="swiper-slide">
+                <img src="/assets/gallery9.jpg" alt="">
+            </article>
+            <article class="swiper-slide">
+                <img src="/assets/gallery10.jpg" alt="">
+            </article>
+            <article class="swiper-slide">
+                <img src="/assets/gallery11.jpg" alt="">
+            </article>
+        </div>
+        <div class="swiper-pagination"></div>
+    </div>
+</section>
 
 
 
@@ -159,6 +205,7 @@
     <br>
     <br>
 
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="/app.js"></script>
 </body>
 </html>
