--- a/index.html
+++ b/index.html
@@ -139,6 +139,28 @@
     </div>
 </section>
 
+<section id="exhibitions">
+    <div class="container exhibitions_container">
+        <h2 class="exhibitions_title">Exhibitions</h2>
+        <div class="empty exhibitions_empty"></div>
+        <div class="exhibitions_head">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia voluptate sint, magnam delectus, tempore cumque itaque minus a dolorem fugit ex odio asperiores impedit molestias ipsum earum harum adipisci voluptatum.</p>
+            <a href="mailto:support@frankdev.com" class="contact_btn exhibitions_btn">
+                <i class="uil uil-arrow-up-right"></i>
+                <p>CONTACT - SEND ME AN EMAIL</p>
+            </a>
+        </div>
+        <div class="exhibitions_gallery">
+            <article><img src="/assets/ev.jpg" alt=""></article>
+            <article><img src="/assets/e1.jpg" alt=""></article>
+            <article><img src="/assets/e2.jpg" alt=""></article>
+            <article><img src="/assets/eh.jpg" alt=""></article>
+            <article><img src="/assets/e3.jpg" alt=""></article>
+            <article><img src="/assets/e4.jpg" alt=""></article>
+            <article><img src="/assets/e5.jpg" alt=""></article>
+        </div>
+    </div>
+</section>
 
 
 
