footer html css

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="container footer_container">
         <div class="footer_head">
             <h2 class="footer_title">support@frankdev.com</h2>
-            <a href="mailto:support@frankdev.com" class="footer_btn"><i class="uil uil-arrow-up-right"></i>
+            <a href="mailto:support@frankdev.com" class="footer_btn"><i class="uil uil-arrow-up-right"></i></a>
         </div>
         <ul class="footer_links">
             <li><a href="#">Home</a></li>
