animatiosn close open

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <li><a href="https://twitter.com/" target="_blank"><i class="uil uil-twitter"></i></a></li>
                 <li><a href="https://youtube.com/" target="_blank"><i class="uil uil-youtube"></i></a></li>
             </ul>
-            <button class="nav_toggle-btn" id="nav_toggle_open"><i class="uil uil-bars"></i></button>
-            <button class="nav_toggle-btn" id="nav_toggle_close"><i class="uil uil-multiply"></i></button>
+            <button class="nav_toggle-btn" id="nav_toggle-open"><i class="uil uil-bars"></i></button>
+            <button class="nav_toggle-btn" id="nav_toggle-close"><i class="uil uil-multiply"></i></button>
         </div>
     </nav>
 
